--- a/src/app/component/home/home.component.css
+++ b/src/app/component/home/home.component.css
@@ -4,7 +4,7 @@
 }
 .home .background{
     width: 100%;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
